--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -43,14 +43,11 @@ jobs:
       - name: Build Rust Binary with napi
         run: npm run build:debug
 
+      - name: Check tree is clean
+        run: ./clean-tree.sh
+
       - name: Npm test (binary)
         run: npm run test:build
-
-      - name: Npm run schema
-        run: npm run schema
-
-      - name: Npm run build:client
-        run: npm run build:client
 
       - name: Npm run build:example
         run: npm run build:example
