--- a/crates/bsnext_html/Cargo.toml
+++ b/crates/bsnext_html/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bsnext_input = { path = "../bsnext_input" }
 unindent = "0.2.3"
+indent = "0.1.1"
 scraper = "0.21.0"
 
 [dev-dependencies]
