--- a/examples/basic/playground.yml
+++ b/examples/basic/playground.yml
@@ -1,5 +1,8 @@
 servers:
   - name: playground
+    routes:
+      - path: /
+        dir: examples/basic/public
     playground:
       html: |
         <div class="main">
@@ -7,7 +10,6 @@ servers:
         </div>
       css: |
         @import url("/reset.css");
-        
         :root {
             border: 50px solid pink;
             height: 100vh;
