--- a/crates/bsnext_input/Cargo.toml
+++ b/crates/bsnext_input/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bsnext_resp = { path = "../bsnext_resp" }
 bsnext_tracing = { path = "../bsnext_tracing" }
 bsnext_guards = { path = "../bsnext_guards" }
+shell-words = { version = "1.1.0" }
 
 miette = { workspace = true }
 
