deterministic HTML output

--- a/crates/bsnext_html/Cargo.toml
+++ b/crates/bsnext_html/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 bsnext_input = { path = "../bsnext_input" }
 unindent = "0.2.3"
 indent = "0.1.1"
-scraper = "0.21.0"
+scraper = { git = "https://github.com/shakyShane/scraper.git", branch = "master" }
 
 [dev-dependencies]
 anyhow = { workspace = true }
