--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -25,6 +25,8 @@ actix = { workspace = true }
 actix-rt = { workspace = true }
 tracing = { workspace = true }
 tempfile = { workspace = true }
+futures-util = { workspace = true }
+http = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
