--- a/crates/bsnext_dto/Cargo.toml
+++ b/crates/bsnext_dto/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 bsnext_input = { path = "../bsnext_input" }
 bsnext_fs = { path = "../bsnext_fs" }
 bsnext_tracing = { path = "../bsnext_tracing" }
-bsnext_output2 = { path = "../bsnext_output2" }
+bsnext_output = { path = "../bsnext_output" }
 
 serde = { workspace = true }
 thiserror = { workspace = true }
@@ -18,3 +18,4 @@ actix = { workspace = true }
 typeshare = { workspace = true }
 anyhow = { workspace = true }
 miette = { workspace = true }
+tracing = { workspace = true }
