--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -26,7 +26,10 @@ actix = { workspace = true }
 actix-rt = { workspace = true }
 tracing = { workspace = true }
 tempfile = { workspace = true }
+futures-util = { workspace = true }
+futures = "0.3.30"
 
 [dev-dependencies]
 insta = { workspace = true }
 tokio-stream = { workspace = true }
+reqwest = { version = "0.12" }
