--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ mime_guess = "2.0.4"
 tempfile = "3.10.1"
 insta = { version = "1.38.0", features = ["yaml"] }
 miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
+kill_tree = { version = "0.2.4", features = ["tokio"] }
 
 [profile.release]
 strip = true
