--- a/bslive.yml
+++ b/bslive.yml
@@ -5,10 +5,16 @@ servers:
     routes:
       - path: /
         dir: examples/basic/public
-      - path: /
-        cors: true
-        dir: examples/kitchen-sink
-      - path: /
-        proxy: https://shaneddg.ngrok.io
-      - path: /raw
-        raw: '1234'
+        watch:
+          debounce:
+            ms: 300
+          run:
+            - sh: sleep 2
+            - bslive: notify-server
+#      - path: /
+##        cors: true
+##        dir: examples/kitchen-sink
+##      - path: /
+##        proxy: https://shaneddg.ngrok.io
+##      - path: /raw
+##        raw: '1234'
