some book keeping on current task

--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -19,6 +19,7 @@ bsnext_dto = { path = "../bsnext_dto" }
 bsnext_example = { path = "../bsnext_example" }
 bsnext_output = { path = "../bsnext_output" }
 rand = "0.8.5"
+kill_tree = { workspace = true }
 
 anyhow = { workspace = true }
 clap = { workspace = true }
