--- a/examples/watcher/package.json
+++ b/examples/watcher/package.json
@@ -1,7 +1,15 @@
 {
-  "private": true,
-  "version": "0.0.2",
-  "dependencies": {
+  "name": "watcher",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
     "preact": "^10.26.4"
   }
 }
