--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -29,7 +29,9 @@ actix-rt = { workspace = true }
 tracing = { workspace = true }
 tempfile = { workspace = true }
 futures-util = { workspace = true }
+thiserror = { workspace = true }
 futures = "0.3.30"
+pin-project-lite = "0.2.14"
 
 [dev-dependencies]
 insta = { workspace = true }
