--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@browsersync/bslive",
   "version": "0.16.2",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "entry.mjs",
   "bin": {
     "bslive": "./bin.js"
   },
