pad the ending of the initial task set

--- a/examples/watch/watch-max-concurrency.yml
+++ b/examples/watch/watch-max-concurrency.yml
@@ -12,8 +12,8 @@ servers:
             - opts:
                 max: 3
               all:
-                - sh: "echo 'Start A' && sleep 0.3 && echo 'End A'"
-                - sh: "echo 'Start B' && sleep 0.3 && echo 'End B'"
-                - sh: "echo 'Start C' && sleep 0.3 && echo 'End C'"
+                - sh: "echo 'Start A' && sleep 0.3 && echo 'End A' && sleep 0.3"
+                - sh: "echo 'Start B' && sleep 0.3 && echo 'End B' && sleep 0.3"
+                - sh: "echo 'Start C' && sleep 0.3 && echo 'End C' && sleep 0.3"
                 - sh: "echo 'Start D' && sleep 0.3 && echo 'End D'"
                 - sh: "echo 'Start E' && sleep 0.3 && echo 'End E'"
