--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -29,6 +29,7 @@ actix = { workspace = true }
 actix-rt = { workspace = true }
 tracing = { workspace = true }
 tempfile = { workspace = true }
+glob = { workspace = true }
 futures-util = { workspace = true }
 futures = "0.3.30"
 
