--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,8 @@ bytes = "1.6.0"
 http = "1.1.0"
 http-body-util = "0.1.1"
 typeshare = "1"
-glob = "0.3.2"
+globset = { version = "0.4.16" }
 random_word = { version = "0.4.3", features = ["en"] }
-toml = { version = "0.8.12" }
 mime_guess = "2.0.4"
 tempfile = "3.10.1"
 insta = { version = "1.38.0", features = ["yaml"] }
