--- a/examples/openai/bslive.yml
+++ b/examples/openai/bslive.yml
@@ -16,4 +16,11 @@ servers:
             data: {"id":"chatcmpl-98DH53xoEHQ7RhaBF9Djt0GoczbM2","object":"chat.completion.chunk","created":1711744679,"model":"gpt-3.5-turbo-0125","system_fingerprint":"fp_3bc1b5746c","choices":[{"index":0,"delta":{"content":" is"},"logprobs":null,"finish_reason":null}]}
             
             data: [DONE] 
-            
+  - name: openai-file
+    routes:
+      - path: /
+        dir: ./examples/openai
+        watch: false
+      - path: /openai/v1/chat/completions
+        sse:
+          body: file:./examples/openai/sse/01.txt
