--- a/crates/bsnext_core/Cargo.toml
+++ b/crates/bsnext_core/Cargo.toml
@@ -45,6 +45,7 @@ serde_yaml = { workspace = true }
 serde_json = { workspace = true }
 bytes = { workspace = true }
 http = { workspace = true }
+log = "0.4.21"
 
 [[example]]
 name = "abc"
