--- a/crates/bsnext_core/Cargo.toml
+++ b/crates/bsnext_core/Cargo.toml
@@ -30,6 +30,7 @@ insta = { workspace = true }
 clap = { workspace = true }
 axum = { workspace = true }
 http-body-util = { workspace = true }
+cookie = { workspace = true }
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
 tower = { workspace = true }
