--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -32,6 +32,8 @@ tempfile = { workspace = true }
 globset = { workspace = true }
 futures-util = { workspace = true }
 futures = "0.3.30"
+tokio-util = "0.7.11"
+sqids = "0.4.2"
 
 [dev-dependencies]
 insta = { workspace = true }
