--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ tempfile = "3.10.1"
 insta = { version = "1.38.0", features = ["yaml"] }
 miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
 kill_tree = { version = "0.2.4", features = ["tokio"] }
+sqids = "0.4.2"
+tokio-util = "0.7.11"
 
 [profile.release]
 strip = true
