--- a/examples/run/children-fail.yml
+++ b/examples/run/children-fail.yml
@@ -4,6 +4,7 @@ run:
       exit_on_fail: true
     all:
       - sh: "echo 'Start A' && sleep 0.3 && echo 'End A' && sleep 0.3 && exit 1"
+      - sh: "echo 'Start B' && sleep 0.7 && echo 'did wait'"
       - seq:
           - sh: "echo level 2"
           - seq:
