just more naming

--- a/crates/bsnext_task/Cargo.toml
+++ b/crates/bsnext_task/Cargo.toml
@@ -8,6 +8,7 @@ bsnext_dto = { path = "../bsnext_dto" }
 bsnext_fs = { path = "../bsnext_fs" }
 actix = { workspace = true }
 tokio = { workspace = true }
+tokio-stream = { workspace = true }
 futures-util = { workspace = true }
 tokio-util = { workspace = true }
 tracing = { workspace = true }
