--- a/crates/bsnext_task/Cargo.toml
+++ b/crates/bsnext_task/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.22.1"
 edition = "2024"
 
 [dependencies]
-bsnext_dto = { path = "../bsnext_dto" }
 bsnext_fs = { path = "../bsnext_fs" }
 actix = { workspace = true }
 tokio = { workspace = true }
@@ -12,4 +11,5 @@ tokio-stream = { workspace = true }
 futures-util = { workspace = true }
 tokio-util = { workspace = true }
 tracing = { workspace = true }
+thiserror = { workspace = true }
 sqids = { workspace = true }
