--- a/examples/watch/watch-graceful.yml
+++ b/examples/watch/watch-graceful.yml
@@ -7,7 +7,5 @@ servers:
           debounce:
             ms: 0
           run:
-            - sh:
-                sh: "node examples/graceful-exit.js"
-                timeout_ms: 1000
-                grace_ms: 3000
+            - sh: "node examples/graceful-exit.js"
+              timeout_ms: 1000
