--- a/examples/run/children-fail.yml
+++ b/examples/run/children-fail.yml
@@ -1,13 +1,14 @@
 run:
-  - opts:
-      max: 3
-      exit_on_fail: true
-    all:
-      - sh: "echo 'Start A' && sleep 0.3 && echo 'End A' && sleep 0.3 && exit 1"
-      - sh: "echo 'Start B' && sleep 0.7 && echo 'did wait'"
-      - seq:
-          - sh: "echo level 2"
-          - seq:
-              - sh: "echo level 3"
-              - seq:
-                  - sh: "echo level 4"
+  default:
+    - opts:
+        max: 3
+        exit_on_fail: true
+      all:
+        - sh: "echo 'Start A' && sleep 0.3 && echo 'End A' && sleep 0.3 && exit 1"
+        - sh: "echo 'Start B' && sleep 0.7 && echo 'did wait'"
+        - seq:
+            - sh: "echo level 2"
+            - seq:
+                - sh: "echo level 3"
+                - seq:
+                    - sh: "echo level 4"
