--- a/examples/run/siblings.yml
+++ b/examples/run/siblings.yml
@@ -1,4 +1,5 @@
 run:
+default:
   - all:
       - sh: "echo 'starting failing task' && sleep 2 && exit 1"
       - sh: "node examples/graceful-exit.js"
